KUBE/Eks/Ingress-Applications/app3-react-java-mysql/k8s/app3-ingress-backup.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      alb.ingress.kubernetes.io/scheme: internet-facing
      alb.ingress.kubernetes.io/target-type: ip
      alb.ingress.kubernetes.io/transforms.app3-backend-service: |
        [{"type":"url-rewrite","urlRewriteConfig":{"rewrites":[{"regex":"^/api/(.*)$","replace":"/$1"}]}}]
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"alb.ingress.kubernetes.io/scheme":"internet-facing","alb.ingress.kubernetes.io/target-type":"ip","alb.ingress.kubernetes.io/transforms.app3-backend-service":"[{\"type\":\"url-rewrite\",\"urlRewriteConfig\":{\"rewrites\":[{\"regex\":\"^/api/(.*)$\",\"replace\":\"/$1\"}]}}]\n"},"name":"app3-ingress","namespace":"app3"},"spec":{"ingressClassName":"alb","rules":[{"host":"app3.avej.com","http":{"paths":[{"backen [...]
    creationTimestamp: "2026-09-11T17:23:52Z"
    finalizers:
    - ingress.k8s.aws/resources
    generation: 1
    name: app3-ingress
    namespace: app3
    resourceVersion: "154072"
    uid: 7c700f53-e202-46d4-af60-38d611fbfc64
  spec:
    ingressClassName: alb
    rules:
    - host: app3.avej.com
      http:
        paths:
        - backend:
            service:
              name: app3-backend-service
              port:
                number: 8080
          path: /api
          pathType: Prefix
        - backend:
            service:
              name: app3-frontend-service
              port:
                number: 80
          path: /
          pathType: Prefix
  status:
    loadBalancer:
      ingress:
      - hostname: k8s-app3-app3ingr-1352ccf866-940939989.ap-south-1.elb.amazonaws.com
        ports:
        - port: 80
          protocol: ""
kind: List
metadata:
  resourceVersion: ""
