KUBE/Eks/Ingress-Applications/app3-react-java-mysql/k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app3-backend-service
  namespace: app3
spec:
  selector:
    app: backend
  ports:
    - port: 8080
      targetPort: 8080
