KUBE/Eks/Ingress-Applications/app3-react-java-mysql/k8s/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-service
  namespace: app3
spec:
  selector:
    app: db
  ports:
    - port: 3306
      targetPort: 3306
